first page done animetion baki

--- a/index.html
+++ b/index.html
@@ -5,11 +5,287 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <title>world-cup</title>
 </head>
 
 <body>
+    <!-- header section -->
+    <header class="header-main">
 
+        <div class="top-section">
+            <div class="heading-area-main">
+
+                <div class=" heading-area">
+                    <h1> The Greatest show on the earth</h1>
+                    <p> Contrary to popular belief, Lorem Ipsum is not simply
+                        random text. <br> It has roots in a piece of classical Latin literature from 45 BC, <br> making
+                        it
+                        over 2000
+                        years old. </p>
+                    <div class="button">
+                        <a class="watch-live-button" href="#">Watch Live <i class="fa-solid fa-angle-right"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="heading-img-area">
+                <img src="./assets/Banner Image.png" alt="">
+            </div>
+        </div>
+
+    </header>
+    <!-- main sectinon -->
+    <main class="main-section">
+
+        <!-- butto area -->
+        <div class="button-main">
+            <div class="button-section">
+                <div class="small-button" style="margin-bottom: 20px;">
+                    <a href="">Upcoming Match</a>
+                </div>
+
+
+                <div class="small-button" style="margin-bottom: 20px;">
+                    <a href="">All Group</a>
+                </div>
+
+
+                <div style="background-image: linear-gradient(to right, lightgreen, cyan);" class="small-button">
+                    <a href="">Blog</a>
+                </div>
+
+            </div>
+        </div>
+
+
+
+
+
+        <!-- card-area -->
+
+        <div class="card-main">
+
+            <div class="card-section">
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Blog Image.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+
+                        <a class="card-button" href="#">Transfer</a>
+                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            </div>
+                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </main>
+
+
+
+    <!-- footer area -->
+
+
+    <footer class="footer">
+        <div class="footer-title">
+            <h2>Goal</h2>
+        </div>
+
+
+
+
+        <div class="about-us">
+
+            <a class="condition" href="#">Contact Us </a>
+            <a class="condition" href="#">Terms of Service </a>
+            <a class="condition" href="#">Privacy Policy </a>
+            <a class="condition" href="#">Privacy Settings </a>
+            <a class="condition" href="#">Goal App </a>
+            <a class="condition" href="#"> Goal Live</a>
+        </div>
+
+
+        <div class="footer-icon">
+            <a class="icon" href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a class="icon" href="#"><i class="fa-brands fa-dribbble"></i></a>
+            <a class="icon" href="#"><i class="fa-brands fa-twitter-square"></i></a>
+            <a class="icon" href="#"><i class="fa-brands fa-youtube-square"></i></a>
+
+
+        </div>
+
+    </footer>
+
+
+
+    <script src="https://kit.fontawesome.com/cb15de5312.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
