--- a/index.html
+++ b/index.html
@@ -273,10 +273,14 @@
 
 
         <div class="footer-icon">
-            <a class="icon" href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a class="icon" href="#"><i class="fa-brands fa-dribbble"></i></a>
-            <a class="icon" href="#"><i class="fa-brands fa-twitter-square"></i></a>
-            <a class="icon" href="#"><i class="fa-brands fa-youtube-square"></i></a>
+            <a class="icon" href="https://www.instagram.com/worldcup.2022.qatar/?hl=en"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a class="icon" href="https://www.fifa.com/fifaplus/en/tournaments/mens/worldcup/qatar2022"><i
+                    class="fa-brands fa-dribbble"></i></a>
+            <a class="icon" href="https://twitter.com/FIFAcom?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i
+                    class="fa-brands fa-twitter-square"></i></a>
+            <a class="icon" href="https://www.youtube.com/fifa/videos?app=desktop"><i
+                    class="fa-brands fa-youtube-square"></i></a>
 
 
         </div>
