animetion add tab half complit

--- a/anotherindex.html
+++ b/anotherindex.html
@@ -20,11 +20,12 @@
                 <div class=" heading-area">
                     <h1> The Greatest show on the earth</h1>
                     <p> Contrary to popular belief, Lorem Ipsum is not simply
-                        random text.</p>
+                        random text. <br> It has roots in a piece of classical Latin literature from 45 BC, <br> making
+                        it
+                        over 2000
+                        years old. </p>
                     <div class="button">
-
-                        <a class="watch-live-button" href="./anotherindex.html">Watch Live <i
-                                class="fa-solid fa-angle-right"></i>
+                        <a class="watch-live-button" href="#">Watch Live <i class="fa-solid fa-angle-right"></i>
                         </a>
                     </div>
                 </div>
@@ -70,192 +71,153 @@
                 <div class="card">
                     <div class="card-img">
 
-                        <img src="./assets/Blog Image.png" alt="">
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
                     </div>
 
                     <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <h2>Germany VS France </h2>
                         <div class="card-icon">
 
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
                             </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-img">
-
-                        <img src="./assets/Blog Image.png" alt="">
-                    </div>
-
-                    <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
-                        <div class="card-icon">
-
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
-                            </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-img">
-
-                        <img src="./assets/Blog Image.png" alt="">
-                    </div>
-
-                    <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
-                        <div class="card-icon">
-
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
-                            </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
 
-                        <img src="./assets/Blog Image.png" alt="">
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
                     </div>
 
                     <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <h2>Germany VS France </h2>
                         <div class="card-icon">
 
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
                             </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
 
-                        <img src="./assets/Blog Image.png" alt="">
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
                     </div>
 
                     <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <h2>Germany VS France </h2>
                         <div class="card-icon">
 
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
                             </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-img">
-
-                        <img src="./assets/Blog Image.png" alt="">
-                    </div>
-
-                    <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
-                        <div class="card-icon">
-
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
-                            </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
 
-                        <img src="./assets/Blog Image.png" alt="">
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
                     </div>
 
                     <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <h2>Germany VS France </h2>
                         <div class="card-icon">
 
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
                             </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
 
-                        <img src="./assets/Blog Image.png" alt="">
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
                     </div>
 
                     <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <h2>Germany VS France </h2>
                         <div class="card-icon">
 
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
                             </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
-
                         </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-img">
 
-                        <img src="./assets/Blog Image.png" alt="">
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
                     </div>
 
                     <div class="card-text">
-                        <div class="card-button-div">
-                            <a class="card-button" href="#">Transfer</a>
-                        </div>
-
-                        <h2>Transfer Live: Chlesea <br> in talks over Kimpenbe <br> transfer</h2>
+                        <h2>Germany VS France </h2>
                         <div class="card-icon">
 
-                            <div style="padding-right: 10px ;"><i class="fa-regular fa-clock"></i> <span>10hr</span>
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
                             </div>
-                            <div> <i class="fa-regular fa-message"></i> <span>23</span> </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
 
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+                        <h2>Germany VS France </h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+                        <h2>Germany VS France </h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-img">
+
+                        <img src="./assets/Flag.png" alt=""> vs
+                        <img src="./assets/germany Flag.png" alt="">
+                    </div>
+
+                    <div class="card-text">
+                        <h2>Germany VS France </h2>
+                        <div class="card-icon">
+
+                            <div style="padding-right: 10px ;"> <span>April 01, 2023,
+                                    <i class="fa-regular fa-clock"></i> 1.00 AM</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -264,11 +226,6 @@
         </div>
 
     </main>
-    <section class="tab-button">
-        <div class="view-button">
-            <a class="watch-live-button" href="#">View All</a>
-        </div>
-    </section>
 
 
 
@@ -276,10 +233,8 @@
 
 
     <footer class="footer">
-        <div class="footer-title-main">
-            <div class="footer-title">
-                <h2>Goal</h2>
-            </div>
+        <div class="footer-title">
+            <h2>Goal</h2>
         </div>
 
 
