tab and mobile add new animetion add

--- a/anotherindex.html
+++ b/anotherindex.html
@@ -233,8 +233,10 @@
 
 
     <footer class="footer">
-        <div class="footer-title">
-            <h2>Goal</h2>
+        <div class="footer-title-main">
+            <div class="footer-title">
+                <h2>Goal</h2>
+            </div>
         </div>
 
 
