--- a/index.html
+++ b/index.html
@@ -35,10 +35,35 @@
         </div>
 
     </header>
+
+
+    <!-- tab button area -->
+    <div class="tab-button-main">
+        <div class="tab-button-section">
+            <div class="small-button" style="border: 1px solid gray;">
+                <a href="">Upcoming Match</a>
+            </div>
+
+
+            <div class="small-button" style="margin-left: 20px; border: 1px solid gray;">
+                <a href="">All Group</a>
+            </div>
+
+
+            <div style="margin-left: 20px; background-image: linear-gradient(to right, lightgreen, cyan); display: flex; justify-content: center; align-items: center;" class="small-button">
+                <a href="">Blog</a>
+            </div>
+
+        </div>
+    </div>
+
+
+
     <!-- main sectinon -->
     <main class="main-section">
+        
 
-        <!-- butto area -->
+        <!-- button area -->
         <div class="button-main">
             <div class="button-section">
                 <div class="small-button" style="margin-bottom: 20px;">
@@ -266,7 +291,7 @@
     </main>
     <section class="tab-button">
         <div class="view-button">
-            <a class="watch-live-button" href="#">View All</a>
+            <a class="view-button-style" href="#">View All</a>
         </div>
     </section>
 
